--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-3">
   <h1 class="text-center">Ciclo de Vida</h1>
   <hr />
   <router-outlet></router-outlet>
