--- a/src/app/products/pages/product/product.component.html
+++ b/src/app/products/pages/product/product.component.html
@@ -1,2 +1,6 @@
 <p>product works!</p>
 <products-price-component></products-price-component>
+
+<button class="btn btn-danger" (click)="isProductVisible = !isProductVisible">
+  Toggle
+</button>
